# youtube_summarizer

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  gemini.md
scripts/: README.md
src/data/presets/: comprehensive.json  sample_1.json  summary_keywords.json
src/youtube_summarize/: __init__.py  cli.py  gemini.py  presets.py  prompts.py  webapp.py
src/youtube_summarize/schemas/: __init__.py  models.py
src/youtube_summarize/web/static/: app.js  style.css
src/youtube_summarize/web/templates/: index.html
tests/: README.md
